[package]
name = "scirs2-ndimage"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "N-dimensional image processing module for SciRS2 (scirs2-ndimage)"
license.workspace = true
repository.workspace = true
keywords = ["image", "processing", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[lints]
workspace = true
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
# Core dependencies - ALL numeric/array/random functionality from scirs2-core (SciRS2 POLICY)
scirs2-core = { workspace = true, features = ["validation", "memory_efficient", "parallel", "array", "random"] }
# scirs2-interpolate = { workspace = true }
scirs2-fft = { workspace = true }
thiserror = { workspace = true }
approx = { workspace = true }
cached = { workspace = true }
tempfile = { workspace = true }
lazy_static = { workspace = true }
num_cpus = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Compression dependencies
flate2 = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
lz4 = { workspace = true, optional = true }
statrs.workspace = true

[features]
default = []
simd = ["scirs2-core/simd"]
parallel = ["scirs2-core/parallel"]
cuda = ["scirs2-core/cuda"]
opencl = []
metal = []
gpu = []  # GPU abstraction layer - does NOT auto-enable specific backends
compression = ["flate2", "zstd", "lz4"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "filters_bench"
harness = false

[[bench]]
name = "morphology_bench"
harness = false

[[bench]]
name = "interpolation_bench"
harness = false

[[bench]]
name = "distance_transform_bench"
harness = false

[[example]]
name = "streaming_processing"

[[example]]
name = "gpu_backend"
required-features = ["gpu"]

# [[example]]
# name = "ndimage_comprehensive_analysis"
