[package]
name = "scirs2-numpy"
version.workspace = true
edition.workspace = true
authors = [
    "The rust-numpy Project Developers",
    "PyO3 Project and Contributors <https://github.com/PyO3>",
    "SciRS2 Contributors (COOLJAPAN OU) (Team KitaSan)"
]
description = "PyO3-based Rust bindings of the NumPy C-API (SciRS2 fork with ndarray 0.17 support)"
documentation = "https://docs.rs/scirs2-numpy"
repository.workspace = true
license = "BSD-2-Clause"
keywords = ["python", "numpy", "ffi", "pyo3", "scientific"]
categories = ["api-bindings", "development-tools::ffi", "science"]

[dependencies]
# Core dependencies with ndarray 0.17 support
half = { workspace = true, optional = true }
libc = { workspace = true }
nalgebra = { version = ">=0.30, <0.35", default-features = false, optional = true }
num-complex = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
ndarray = { workspace = true }  # ndarray 0.17.1 from workspace
pyo3 = { workspace = true, features = ["macros"] }
rustc-hash = "2.1"

[build-dependencies]
pyo3-build-config = { version = "0.27", features = ["resolve-config"] }

[features]
default = []
half-support = ["half"]
nalgebra-support = ["nalgebra"]

[package.metadata.docs.rs]
all-features = true
