[package]
name = "scirs2-python"
version = "0.1.4"
authors = ["COOLJAPAN OU (Team KitaSan) <contact@cooljapan.tech>"]
edition = "2021"
rust-version = "1.70"
description = "Python bindings for SciRS2 - A comprehensive scientific computing library in Rust (SciPy alternative)"
license = "Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
homepage = "https://github.com/cool-japan/scirs"
documentation = "https://docs.rs/scirs2-python"
readme = "README.md"
keywords = ["scientific", "python", "numpy", "scipy", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

# Standalone crate (not part of main workspace for v0.1.0)
[workspace]

[workspace.package]
version = "0.1.4"
edition = "2021"
authors = ["COOLJAPAN OU (Team KitaSan) <contact@cooljapan.tech>"]
license = "Apache-2.0"
repository = "https://github.com/cool-japan/scirs"

[lib]
name = "scirs2"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core SciRS2 dependencies with Python feature (path-based for standalone build)
scirs2-core = { path = "../scirs2-core", features = ["python", "array", "random"] }
scirs2-cluster = { path = "../scirs2-cluster", features = ["python"] }
scirs2-series = { path = "../scirs2-series", features = ["python"] }
scirs2-linalg = { path = "../scirs2-linalg", features = ["python"] }
scirs2-stats = { path = "../scirs2-stats", features = ["python"] }
scirs2-fft = { path = "../scirs2-fft", features = ["python", "oxifft"] }
scirs2-optimize = { path = "../scirs2-optimize", features = ["python"] }
scirs2-special = { path = "../scirs2-special" }
scirs2-integrate = { path = "../scirs2-integrate" }
scirs2-interpolate = { path = "../scirs2-interpolate" }
scirs2-signal = { path = "../scirs2-signal" }
scirs2-spatial = { path = "../scirs2-spatial" }
scirs2-sparse = { path = "../scirs2-sparse" }
scirs2-ndimage = { path = "../scirs2-ndimage" }
scirs2-graph = { path = "../scirs2-graph" }
scirs2-metrics = { path = "../scirs2-metrics" }
scirs2-io = { path = "../scirs2-io" }
scirs2-datasets = { path = "../scirs2-datasets", default-features = false }
scirs2-transform = { path = "../scirs2-transform" }
scirs2-text = { path = "../scirs2-text" }
scirs2-vision = { path = "../scirs2-vision" }
scirs2-autograd = { path = "../scirs2-autograd" }
scirs2-neural = { path = "../scirs2-neural" }

# Python bindings
pyo3 = { version = "0.27.1", features = ["extension-module"] }
scirs2-numpy = { path = "../scirs2-numpy" }  # SciRS2 fork with ndarray 0.17 support

# Error handling
thiserror = "2.0.16"

# Image processing (needed for vision module)
image = "0.25"

[features]
default = ["cluster", "series", "linalg", "stats", "fft", "optimize", "special", "integrate", "interpolate", "signal", "spatial", "sparse", "ndimage", "graph", "metrics", "io", "datasets", "transform", "text", "vision", "autograd", "neural", "oxifft", "random"]

# Module features
cluster = []
series = []
linalg = []
stats = []
fft = []
optimize = []
special = []
integrate = []
interpolate = []
signal = []
spatial = []
sparse = []
ndimage = []
graph = ["random"]  # Graph generators require random number generation
metrics = []
io = []
datasets = []
transform = []
text = []
vision = []
autograd = []
neural = []

# Core feature propagation
random = ["scirs2-core/random"]  # Random number generation from scirs2-core

# Performance optimization features
oxifft = ["scirs2-fft/oxifft"]  # Pure Rust high-performance FFT

# Acceleration features (passed through to subcrates)
simd = ["scirs2-core/simd"]
parallel = ["scirs2-core/parallel"]
gpu = ["scirs2-core/gpu"]

# All modules
full = ["cluster", "series", "linalg", "stats", "fft", "optimize", "special", "integrate", "interpolate", "signal", "spatial", "sparse", "ndimage", "graph", "metrics", "io", "datasets", "transform", "text", "vision", "autograd", "neural", "oxifft"]
