[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "scirs2"
version = "0.1.0"
description = "SciRS2: A comprehensive scientific computing library in Rust - Python bindings (SciPy alternative)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
keywords = ["scientific", "numpy", "scipy", "machine-learning", "statistics"]
authors = [
    { name = "COOLJAPAN OU", email = "contact@cooljapan.tech" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pandas>=1.0",
    "scipy>=1.7",  # For comparison benchmarks
]

[project.urls]
Homepage = "https://github.com/cool-japan/scirs"
Repository = "https://github.com/cool-japan/scirs"
Documentation = "https://docs.rs/scirs2"
"Bug Tracker" = "https://github.com/cool-japan/scirs/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "scirs2"
include = ["scirs2.pyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
