[package]
name = "scirs2-spatial"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Spatial algorithms module for SciRS2 (scirs2-spatial)"
license.workspace = true
repository.workspace = true
keywords = ["spatial", "distance", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[lints]
workspace = true
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["simd", "parallel", "linalg", "random", "types"] }
# Removed ndarray, num-complex, rand - use scirs2-core abstractions per SciRS2 policy
num-traits = { workspace = true }
thiserror = { workspace = true }
num = { workspace = true }
statrs = { workspace = true }
approx = { workspace = true }

# Temporary: num_complex needed for compatibility until scirs2_core::Complex64 is fully compatible
num-complex = { workspace = true }

# Temporary: rand needed for compatibility during migration to scirs2_core::random
rand = { workspace = true }

# System dependencies for NUMA
libc = { workspace = true }

# Async runtime for tensor core operations
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

# CPU detection for adaptive selection
num_cpus = { workspace = true }

# Linear algebra dependencies handled through scirs2-core
# scirs2-linalg = { workspace = true }  # Temporarily disabled due to compilation errors
# ndarray-linalg = { workspace = true } # Removed - use scirs2-core BLAS abstractions

[features]
default = ["parallel"]
parallel = []
cuda = []
rocm = []
vulkan = []

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
# Removed rand_chacha - use scirs2-core random abstractions per SciRS2 policy
plotters = { workspace = true }
num_cpus = { workspace = true }
tokio-test = { workspace = true }

[[bench]]
name = "spatial_benchmarks"
harness = false

[[bench]]
name = "simple_spatial_bench"
harness = false

[[bench]]
name = "quick_spatial_bench"
harness = false

[[bench]]
name = "minimal_bench"
harness = false

[[bench]]
name = "simd_bench"
harness = false

[[bench]]
name = "advanced_modules_performance"
harness = false

# [[test]]
# name = "integration_tests"
# path = "tests/integration_tests.rs"
