[package]
name = "scirs2-stats"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Statistical functions module for SciRS2 (scirs2-stats)"
license.workspace = true
repository.workspace = true
keywords = ["statistics", "probability", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[lints]
workspace = true
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
# Core dependencies - ALL numeric/array/random functionality from scirs2-core (SciRS2 POLICY)
scirs2-core = { workspace = true, features = ["validation", "parallel", "simd", "linalg", "random", "array"] }
scirs2-linalg = { workspace = true }
thiserror = { workspace = true }

# Statistics specific dependencies
statrs = { workspace = true }
special = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
either = { workspace = true }
chrono = { workspace = true }
memmap2 = { workspace = true }
quickcheck = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
plotters = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
rand = { workspace = true }
approx = { workspace = true }

[features]
default = []
# NOTE: OpenBLAS/Netlib features removed - using pure Rust OxiBLAS for all platforms
# Memory mapping support for large files
memmap = []
# Python bindings support
python = ["scirs2-core/python"]

[[bench]]
name = "distributions"
harness = false

[[bench]]
name = "statistical_tests"
harness = false

[[bench]]
name = "scipy_comparison"
harness = false

[[bench]]
name = "comprehensive_scipy_comparison"
harness = false


