[package]
name = "scirs2-transform"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Data transformation module for SciRS2 (scirs2-transform)"
license.workspace = true
repository.workspace = true
keywords = ["transform", "feature-engineering", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[[bench]]
name = "transform_bench"
harness = false

[lints]
workspace = true
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
# Core dependencies - ALL numeric/array/random functionality from scirs2-core (SciRS2 POLICY)
scirs2-core = { workspace = true, features = ["validation", "parallel", "simd", "array", "random"] }
scirs2-linalg = { workspace = true }
scirs2-stats = { workspace = true }
scirs2-fft = { workspace = true }
thiserror = { workspace = true }
approx = { workspace = true }
num_cpus = { workspace = true }
regex = { workspace = true }
ahash = { workspace = true }
statrs = { workspace = true }

# Optional dependencies for new features
tokio = { workspace = true, optional = true, features = ["full"] }
serde = { workspace = true, optional = true, features = ["derive"] }
oxicode = { workspace = true, optional = true }  # Binary serialization (SIMD-optimized)
tch = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Future dependency for PandRS with appropriate abstractions
# pandrs_wrapper = { path = "../wrappers/pandrs_wrapper", optional = true }

[features]
default = []
simd = ["scirs2-core/simd"]
gpu = ["scirs2-core/gpu"]
distributed = ["dep:tokio", "dep:serde", "dep:oxicode"]  # SIMD-optimized serialization
auto-feature-engineering = ["dep:tch"]
monitoring = ["dep:prometheus", "dep:serde_json"]
# Enable external ML library wrappers
# pandrs = ["dep:pandrs_wrapper"]

[dev-dependencies]
scirs2-datasets = { workspace = true }
plotters = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
ndarray-rand = { workspace = true }
